Theming select box and fixing layout bugs cause from their existing styles on amelia website

--- a/scss/_landing.scss
+++ b/scss/_landing.scss
@@ -1,14 +1,14 @@
-#mmg-amelia-app-lp {
+article#mmg-amelia-app-lp {
   * {
     box-sizing: border-box;
   }
-  font-family: "Raleway", sans-serif;
+  font-family: Raleway, sans-serif;
+  width: 100%;
   .hero {
     background-image: url(../img/header-bgimg.jpg);
     position: relative;
     background-position: center;
     background-size: cover;
-
   }
   .bottom-panel {
     @extend .hero;
@@ -18,7 +18,7 @@
     position: absolute;
     bottom: 20px;
     left: 50%;
-    transform: translateX(-50%);
+    @include translateX(-50%);
   }
   h1 {
     color: $aqua;
@@ -29,6 +29,7 @@
     position: relative;
   }
   .section-content {
+    z-index: 10;
     padding: 5% 0;
     height: 100%;
     width: 100%;
@@ -36,7 +37,7 @@
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%);
+    @include translate(-50%, -50%);
     &.rel {
       position: relative;
       left: unset;
@@ -46,18 +47,21 @@
   }
   section > .video {
     position: absolute;
-    bottom: 0;
-    left: 50%;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    transform: translateX(-50%);
-    z-index: -5;
+    overflow: hidden;
+    // z-index: -5;
     video.background-video {
-      width: 100%;
       position: absolute;
-      bottom: 0;
+      top: 50%;
       left: 50%;
-      transform: translateX(-50%);
+      min-width: 100%;
+      min-height: 100%;
+      width: auto;
+      height: auto;
+      @include translate(-50%, -50%);
     }
   }
   .form-grid {
@@ -85,9 +89,10 @@
     overflow: visible;
     top: 50%;
     left: 0;
-    padding: 5px 15px;
+    padding: 0 15px;
     border-radius: 7px 7px 0 0;
-    transform: translateY(-50%);
+
+    @include translateY(-50%);
     position: absolute;
     white-space: nowrap;
     text-transform: uppercase;
@@ -100,26 +105,30 @@
       z-index: 10;
     }
   }
-  img.guide {
-    transform: translate(-10%,25%);
-    width: auto;
-    height: 80%;
-    max-width: 1200px;
+  .fort-sequence {
+    img.guide {
+      @include translate(-10%, 25%);
+      width: auto;
+      height: 80%;
+      max-width: 1200px;
+    }
+    div#imagesequence {
+      position: absolute;
+      left: 50%;
+
+      @include translate(-40%, 25%);
+    }
+    img#ameliaFort {
+      max-width: 400px;
+      width: 100%;
+    }
   }
-  div#imagesequence {
-    position: absolute;
-    left: 50%;
-    transform: translate(-40%, 25%);
-  }
-  img#ameliaFort {
-    max-width: 400px;
-  }
-  $formMaxw: 750px;
   .form.full-wide.new-form,
   .instructions {
     @include set-max-width(750px);
   }
   .field {
+    @include marding;
     background: #fff;
     position: relative;
     display: block;
@@ -140,8 +149,22 @@
         text-transform: uppercase;
       }
     }
+    .select {
+      display: block;
+      padding: 0;
+      &:after {
+        @include flexx;
+        vertical-align: middle;
+        font-family: "FontAwesome";
+      }
+    }
     &.submit-wrapper {
       background: $aqua;
+    }
+    .select > select,
+    span div {
+      display: block;
+      height: 100%;
     }
   }
   .app-cta {
@@ -152,6 +175,12 @@
   }
   /////Media Queries///////
   @media (max-width: 767px) {
+    img#ameliaFort {
+      width: 60%;
+    }
+    .aspect-spacer {
+      padding-bottom: 80%;
+    }
     .FormPanel,
     .instructions {
       padding: 0 30px;
@@ -170,7 +199,7 @@
     }
   }
   @media (max-width: 479px) {
-    .hero .aspect-spacer {
+    .aspect-spacer {
       padding-bottom: 100%;
     }
     .field:not(.submit-wrapper) {
